--- a/index.html
+++ b/index.html
@@ -6,64 +6,101 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="styles.css">
+    <link href="https://css.gg/css" rel="stylesheet" />
     <title>Portfolio</title>
 </head>
 <body>
+
 <div class="wrapper">
-<h1>Hi! My name is Lucas</h1>
-    <div class="info">
-        <img class="infoImg" alt="myPicture" src="Day-1080p.jpeg">
-        <div class="infoText">
-            <h1>Who am I?</h1>
-            <div>My full name is Lucas Brennand Barbosa Chiaperini. I was born in the USA but have been living my entire life in Brasil. I'm currently a student studying at the Catholic University of Pernambuco (UNICAP). I'm pursuing my bachelor's degree in Computer Science, and I am looking to graduate in 2025. I'm searching to become either a front-end or fullstack developer and everyday I aim to improve my skills!.</div>
-        </div>
-        </div>
-<h1>My Experiences</h1>
-    <div class="experience">
+    <div class="nav-bar">
+        Lucas Brennand
         <ul>
-            <li>Notecenterpe</li>
-            I started my work journey in 2022 with a small company owned by a single computer technician. He taught me everything about fixing and repairing computers and laptops, and I'm very grateful for this experience as it showed me that I wanted to pursue a career in technology.
-            <li>L'ure Aromas</li>
-            In 2023, a cosmetics company asked for me to be their stock manager. I was in charge of controlling and administrating all the products and was responsible for overseeing all the invoices. It was a change of pace from my area, but it allowed me to work with a real company and see what day to day was like.
-            <li>Pro-criança</li>
-            At the start of the first half of 2024, as an extension project of my university, I had to work with a non-profit organization called Pro-criança (Pro-child). It's a mentorship dedicated to helping children and young teens in poor financial situations. My team's goal was to perform maintenance on the Pro-crianças's website and add new functions.
+            <li><a href="#info">About</a></li>
+            <li><a href="#experience">Experiences</a></li>
+            <li><a href="#skills">Skills</a></li>
+            <li><a href="#projects">Projects</a></li>
+            <li><a href="#contact">Contact</a></li>
         </ul>
     </div>
-<h1>Skills</h1>
-    <a href="">Java</a>
-    <a href="">Javascript</a>
-    <a href="">HTML</a>
-    <a href="">CSS</a>
-    <a href="">SQL</a>
-    <a href="">Android</a>
-    <a href="">Processing</a>
-    <a href="">Excel</a>
-    <a href="">Hardware</a>
+    <div class="bfg-wrapper">
+        <div class="bfg">
+        Hello there !
+        </div>
+    </div>
+    <div class="nextSection">
+        <a href="#info">V</a>
+    </div>
+    <div class="info-wrapper" id="info">
+    <div class="info">
+        <div class="infoText">
+            <h1>About me</h1>
+            <div>My full name is Lucas Brennand Barbosa Chiaperini. I was born in the USA but have been living my entire life in Brasil. I'm currently a student studying at the Catholic University of Pernambuco (UNICAP). I'm pursuing my bachelor's degree in Computer Science, and I am looking to graduate in 2025. I'm searching to become either a front-end or fullstack developer and everyday I aim to improve my skills!</div>
+        </div>
+        </div>
+</div>
+    <div class="experience-wrapper" id="experience">
+        <h1>My Experiences</h1>
+        <div class="experience-box" >
+            <div class="experience">
+                <h2>Notecenterpe</h2>
+            I started my work journey in 2022 with a small company owned by a single computer technician. He taught me
+            everything about fixing and repairing computers and laptops, and I'm very grateful for this experience as it
+            showed me that I wanted to pursue a career in technology.
+        </div>
+        <div class="experience">
+            <h2>L'ure Aromas</h2>
+            In 2023, a cosmetics company asked for me to be their stock manager. I was in charge of controlling and
+            administrating all the products and was responsible for overseeing all the invoices. It was a change of pace
+            from my area, but it allowed me to work with a real company and see what day to day was like.
+        </div>
+        <div class="experience">
+            <h2>Pro-criança</h2>
+            At the start of the first half of 2024, as an extension project of my university, I had to work with a
+            non-profit organization called Pro-criança (Pro-child). It's a mentorship dedicated to helping children and
+            young teens in poor financial situations. My team's goal was to perform maintenance on the Pro-crianças's
+            website and add new functions.
+        </div>
+    </div>
+</div>
+        <h1>Skills</h1>
+        <div class="skills" id="skills">
+        <a href="">Java</a>
+        <a href="">Javascript</a>
+        <a href="">HTML</a>
+        <a href="">CSS</a>
+        <a href="">SQL</a>
+        <a href="">Android</a>
+        <a href="">Processing</a>
+        <a href="">Excel</a>
+        <a href="">Hardware</a>
+    </div>
 <h1>Projects</h1>
-    <div class="projects">
-    <div>
-        <h4>Turn-based RPG</h4>
-    This was my first ever project! It's a turn-based RPG made in java.
-    </div>
-    <div>
-        <h4>Android Calculator</h4>
-    A calculator I made in android while I was still learning.
-    </div>
-        <div>
+    <div class="projects" id="projects">
+        <div class="projectsBox">
+            <h4>Turn-based RPG</h4>
+            <a href="#"><img src="#"></a>
+            This was my first ever project! It's a turn-based RPG made in java.
+        </div>
+        <div class="projectsBox">
+            <h4>Android Calculator</h4>
+            A calculator I made in android while I was still learning to use Jetpack Compose.
+        </div>
+        <div class="projectsBox">
             <h4>Web game (In progress)</h4>
             A web game I am making using JavaScript.
         </div>
-    <div>
-        <h4>University's Final project</h4>
-        This is my final project I am making before graduating from my university.
-    </div>
+        <div class="projectsBox">
+            <h4>University's Final project</h4>
+            This is my final project I am making before graduating from my university.
+        </div>
 </div>
 <h1>Contact</h1>
-<div>Want to keep in touch with me? Check out my socials!</div>
+<div class="contact" id="contact">Want to keep in touch with me? Check out my socials!
     <a href="">E-mail</a>
-    <a href="">Linkedin</a>
+    <a href="">LinkedIn</a>
     <a href="">GitHub</a>
     <a href="">Instagram</a>
+</div>
 <footer>Copyright</footer>
 </div>
 </body>
