--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="styles.css">
     <link href="https://css.gg/css" rel="stylesheet" />
+    <script src="https://kit.fontawesome.com/d838ff19ed.js" crossorigin="anonymous"></script>
     <title>Portfolio</title>
 </head>
 <body>
@@ -28,18 +29,20 @@
         </div>
     </div>
     <div class="nextSection">
-        <a href="#info">V</a>
+        <a href="#info-anchor">V</a>
     </div>
+    <div id="info-anchor"><br></div>
+
     <div class="info-wrapper" id="info">
     <div class="info">
+        <h1>About me</h1>
         <div class="infoText">
-            <h1>About me</h1>
             <div>My full name is Lucas Brennand Barbosa Chiaperini. I was born in the USA but have been living my entire life in Brasil. I'm currently a student studying at the Catholic University of Pernambuco (UNICAP). I'm pursuing my bachelor's degree in Computer Science, and I am looking to graduate in 2025. I'm searching to become either a front-end or fullstack developer and everyday I aim to improve my skills!</div>
         </div>
         </div>
 </div>
     <div class="experience-wrapper" id="experience">
-        <h1>My Experiences</h1>
+        <h1>Experiences</h1>
         <div class="experience-box" >
             <div class="experience">
                 <h2>Notecenterpe</h2>
@@ -62,18 +65,18 @@
         </div>
     </div>
 </div>
+    <div class="skills-wrapper">
         <h1>Skills</h1>
         <div class="skills" id="skills">
-        <a href="">Java</a>
-        <a href="">Javascript</a>
-        <a href="">HTML</a>
-        <a href="">CSS</a>
-        <a href="">SQL</a>
-        <a href="">Android</a>
-        <a href="">Processing</a>
-        <a href="">Excel</a>
-        <a href="">Hardware</a>
-    </div>
+            <div class="skills-icon"><a href=""><i class="fa-brands fa-java"></i>Java</a></div>
+            <div class="skills-icon"><a href=""><i class="fa-brands fa-js"></i>Javascript</a></div>
+            <div class="skills-icon"><a href=""><i class="fa-brands fa-html5"></i>HTML</a></div>
+            <div class="skills-icon"><a href=""><i class="fa-brands fa-css3-alt"></i>CSS</a></div>
+            <div class="skills-icon"><a href=""><i class="fa-solid fa-database"></i>SQL</a></div>
+            <div class="skills-icon"><a href=""><i class="fa-brands fa-android"></i>Android</a></div>
+            <div class="skills-icon"><a href=""><i class="fa-solid fa-laptop"></i>Hardware</a></div>
+        </div>
+</div>
 <h1>Projects</h1>
     <div class="projects" id="projects">
         <div class="projectsBox">
