--- a/index.html
+++ b/index.html
@@ -13,98 +13,114 @@
 <body>
 
 <div class="wrapper">
-    <div class="nav-bar">
+    <div class="nav-bar-wrapper">
         Lucas Brennand
+        <div class="nav-bar">
         <ul>
-            <li><a href="#info">About</a></li>
-            <li><a href="#experience">Experiences</a></li>
-            <li><a href="#skills">Skills</a></li>
-            <li><a href="#projects">Projects</a></li>
-            <li><a href="#contact">Contact</a></li>
+            <li><a href="#info-anchor">About</a></li>
+            <li><a href="#experience-anchor">Experiences</a></li>
+            <li><a href="#skills-anchor">Skills</a></li>
+            <li><a href="#projects-anchor">Projects</a></li>
+            <li><a href="#contact-anchor">Contact</a></li>
         </ul>
+    </div>
     </div>
     <div class="bfg-wrapper">
         <div class="bfg">
-        Hello there !
+            Hello there !
         </div>
     </div>
     <div class="nextSection">
-        <a href="#info-anchor">V</a>
+        <a href="#info-anchor"><i class="fa-solid fa-arrow-down-long"></i></a>
     </div>
     <div id="info-anchor"><br></div>
-
     <div class="info-wrapper" id="info">
-    <div class="info">
-        <h1>About me</h1>
-        <div class="infoText">
-            <div>My full name is Lucas Brennand Barbosa Chiaperini. I was born in the USA but have been living my entire life in Brasil. I'm currently a student studying at the Catholic University of Pernambuco (UNICAP). I'm pursuing my bachelor's degree in Computer Science, and I am looking to graduate in 2025. I'm searching to become either a front-end or fullstack developer and everyday I aim to improve my skills!</div>
+        <div class="info">
+            <h1>About me</h1>
+            <div class="infoText">
+                <div>My name is Lucas Brennand Barbosa Chiaperini. I was born in the USA but have been living my entire life in Brasil. I'm currently a student studying at the Catholic University of Pernambuco (UNICAP). I'm pursuing my bachelor's degree in Computer Science, and I am looking to graduate in 2025. I'm searching to become either a front-end or fullstack developer and everyday I aim to improve my skills!</div>
+            </div>
         </div>
-        </div>
-</div>
+    </div>
+    <div id="experience-anchor"><br></div>
     <div class="experience-wrapper" id="experience">
         <h1>Experiences</h1>
         <div class="experience-box" >
             <div class="experience">
                 <h2>Notecenterpe</h2>
-            I started my work journey in 2022 with a small company owned by a single computer technician. He taught me
-            everything about fixing and repairing computers and laptops, and I'm very grateful for this experience as it
-            showed me that I wanted to pursue a career in technology.
-        </div>
-        <div class="experience">
-            <h2>L'ure Aromas</h2>
-            In 2023, a cosmetics company asked for me to be their stock manager. I was in charge of controlling and
-            administrating all the products and was responsible for overseeing all the invoices. It was a change of pace
-            from my area, but it allowed me to work with a real company and see what day to day was like.
-        </div>
-        <div class="experience">
-            <h2>Pro-criança</h2>
-            At the start of the first half of 2024, as an extension project of my university, I had to work with a
-            non-profit organization called Pro-criança (Pro-child). It's a mentorship dedicated to helping children and
-            young teens in poor financial situations. My team's goal was to perform maintenance on the Pro-crianças's
-            website and add new functions.
+                I started my work journey in 2022 with a small company owned by a single computer technician. He taught me
+                everything about fixing and repairing computers and laptops, and I'm very grateful for this experience as it
+                showed me that I wanted to pursue a career in technology.
+            </div>
+            <div class="experience">
+                <h2>L'ure Aromas</h2>
+                In 2023, a cosmetics company asked for me to be their stock manager. I was in charge of controlling and
+                administrating all the products and was responsible for overseeing all the invoices. It was a change of pace
+                from my area, but it allowed me to work with a real company and see what day to day was like.
+            </div>
+            <div class="experience">
+                <h2>Pro-criança</h2>
+                At the start of the first half of 2024, as an extension project of my university, I had to work with a
+                non-profit organization called Pro-criança (Pro-child). It's a mentorship dedicated to helping children and
+                young teens in poor financial situations. My team's goal was to perform maintenance on the Pro-crianças's
+                website and add new functions.
+            </div>
         </div>
     </div>
-</div>
+    <div id="skills-anchor"><br></div>
     <div class="skills-wrapper">
         <h1>Skills</h1>
         <div class="skills" id="skills">
-            <div class="skills-icon"><a href=""><i class="fa-brands fa-java"></i>Java</a></div>
-            <div class="skills-icon"><a href=""><i class="fa-brands fa-js"></i>Javascript</a></div>
-            <div class="skills-icon"><a href=""><i class="fa-brands fa-html5"></i>HTML</a></div>
-            <div class="skills-icon"><a href=""><i class="fa-brands fa-css3-alt"></i>CSS</a></div>
-            <div class="skills-icon"><a href=""><i class="fa-solid fa-database"></i>SQL</a></div>
-            <div class="skills-icon"><a href=""><i class="fa-brands fa-android"></i>Android</a></div>
-            <div class="skills-icon"><a href=""><i class="fa-solid fa-laptop"></i>Hardware</a></div>
+            <div class="skills-icon"><a><i class="fa-brands fa-java"></i>Java</a></div>
+            <div class="skills-icon"><a><i class="fa-brands fa-js"></i>Javascript</a></div>
+            <div class="skills-icon"><a><i class="fa-brands fa-html5"></i>HTML</a></div>
+            <div class="skills-icon"><a><i class="fa-brands fa-css3-alt"></i>CSS</a></div>
+            <div class="skills-icon"><a><i class="fa-solid fa-database"></i>SQL</a></div>
+            <div class="skills-icon"><a><i class="fa-brands fa-android"></i>Android</a></div>
+            <div class="skills-icon"><a><i class="fa-solid fa-laptop"></i>Hardware</a></div>
         </div>
+    </div>
+    <div id="projects-anchor"><br></div>
+    <div class="projects-wrapper">
+        <h1>Projects</h1>
+        <div class="projects" id="projects">
+            <div class="projectsBox">
+                <a href="https://github.com/LucasBrennand/Projeto-RPG" target="_blank"><img src="RPGgame.png"></a>
+                <h4>Turn-based RPG</h4>
+                This was my first ever project! It's a turn-based RPG made in java.
+            </div>
+            <div class="projectsBox">
+                <a href="https://github.com/LucasBrennand/CalculatorAndroid" target="_blank"><img src="calculator.png"></a>
+                <h4>Android Calculator</h4>
+                A calculator I made in android while I was still learning to use Jetpack Compose.
+            </div>
+            <div class="projectsBox">
+                <a href="#"><img src="Day-1080p.jpeg"></a>
+                <h4>Web game</h4>
+                A browser game I am making using JavaScript.
+            </div>
+            <div class="projectsBox">
+                <a href="#"><img src="Day-1080p.jpeg"></a>
+                <h4>Final project</h4>
+                This is my final project I am making before graduating from my university.
+            </div>
+        </div>
+    </div>
+    <div id="contact-anchor"><br></div>
+    <div class="contact-wrapper">
+    <h1>Contact</h1>
+        Want to keep in touch with me? Check out my socials!
+    <div class="contactBox" id="contact">
+        <div class="contact"><a href="mailto:lucasbrennand.barbosa@gmail.com"><i class="fa-solid fa-envelope"></i></a>  lucasbrennand.barbosa@gmail.com</div>
+        <div class="contact"><a href="https://www.linkedin.com/in/lucas-brennand-9121b2205/" target="_blank"><i class="fa-brands fa-linkedin"></i></a></div>
+        <div class="contact"><a href="https://github.com/LucasBrennand" target="_blank"><i class="fa-brands fa-github"></i></a></div>
+        <div class="contact"><a href="https://www.instagram.com/lucasbbrennand/" target="_blank"><i class="fa-brands fa-instagram"></i></a></div>
+    </div>
+    <footer>
+        <div class="copyright">Copyright <i class="fa-regular fa-copyright"></i> Made by Lucas Brennand</div>
+    </footer>
 </div>
-<h1>Projects</h1>
-    <div class="projects" id="projects">
-        <div class="projectsBox">
-            <h4>Turn-based RPG</h4>
-            <a href="#"><img src="#"></a>
-            This was my first ever project! It's a turn-based RPG made in java.
-        </div>
-        <div class="projectsBox">
-            <h4>Android Calculator</h4>
-            A calculator I made in android while I was still learning to use Jetpack Compose.
-        </div>
-        <div class="projectsBox">
-            <h4>Web game (In progress)</h4>
-            A web game I am making using JavaScript.
-        </div>
-        <div class="projectsBox">
-            <h4>University's Final project</h4>
-            This is my final project I am making before graduating from my university.
-        </div>
 </div>
-<h1>Contact</h1>
-<div class="contact" id="contact">Want to keep in touch with me? Check out my socials!
-    <a href="">E-mail</a>
-    <a href="">LinkedIn</a>
-    <a href="">GitHub</a>
-    <a href="">Instagram</a>
-</div>
-<footer>Copyright</footer>
-</div>
+
 </body>
 </html>
