--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <div class="nextSection">
         <a href="#info-anchor"><i class="fa-solid fa-arrow-down-long"></i></a>
     </div>
-    <div id="info-anchor"><br></div>
+    <div id="info-anchor"></div>
     <div class="info-wrapper" id="info">
         <div class="info">
             <h1>About me</h1>
@@ -42,7 +42,7 @@
             </div>
         </div>
     </div>
-    <div id="experience-anchor"><br></div>
+    <div id="experience-anchor"></div>
     <div class="experience-wrapper" id="experience">
         <h1>Experiences</h1>
         <div class="experience-box" >
@@ -67,7 +67,7 @@
             </div>
         </div>
     </div>
-    <div id="skills-anchor"><br></div>
+    <div id="skills-anchor"></div>
     <div class="skills-wrapper">
         <h1>Skills</h1>
         <div class="skills" id="skills">
@@ -80,7 +80,7 @@
             <div class="skills-icon"><a><i class="fa-solid fa-laptop"></i>Hardware</a></div>
         </div>
     </div>
-    <div id="projects-anchor"><br></div>
+    <div id="projects-anchor"></div>
     <div class="projects-wrapper">
         <h1>Projects</h1>
         <div class="projects" id="projects">
@@ -106,7 +106,7 @@
             </div>
         </div>
     </div>
-    <div id="contact-anchor"><br></div>
+    <div id="contact-anchor"></div>
     <div class="contact-wrapper">
     <h1>Contact</h1>
         Want to keep in touch with me? Check out my socials!
