--- a/index.html
+++ b/index.html
@@ -16,13 +16,11 @@
     <div class="nav-bar-wrapper">
         Lucas Brennand
         <div class="nav-bar">
-        <ul>
-            <li><a href="#info-anchor">About</a></li>
-            <li><a href="#experience-anchor">Experiences</a></li>
-            <li><a href="#skills-anchor">Skills</a></li>
-            <li><a href="#projects-anchor">Projects</a></li>
-            <li><a href="#contact-anchor">Contact</a></li>
-        </ul>
+            <div><a href="#info-anchor">About</a></div>
+            <div><a href="#experience-anchor">Experiences</a></div>
+            <div><a href="#skills-anchor">Skills</a></div>
+            <div><a href="#projects-anchor">Projects</a></div>
+            <div><a href="#contact-anchor">Contact</a></div>
     </div>
     </div>
     <div class="bfg-wrapper">
@@ -33,7 +31,7 @@
     <div class="nextSection">
         <a href="#info-anchor"><i class="fa-solid fa-arrow-down-long"></i></a>
     </div>
-    <div id="info-anchor"></div>
+    <div id="info-anchor"><br><br><br></div>
     <div class="info-wrapper" id="info">
         <div class="info">
             <h1>About me</h1>
@@ -42,7 +40,7 @@
             </div>
         </div>
     </div>
-    <div id="experience-anchor"></div>
+    <div id="experience-anchor"><br><br><br></div>
     <div class="experience-wrapper" id="experience">
         <h1>Experiences</h1>
         <div class="experience-box" >
@@ -67,7 +65,7 @@
             </div>
         </div>
     </div>
-    <div id="skills-anchor"></div>
+    <div id="skills-anchor"><br><br><br></div>
     <div class="skills-wrapper">
         <h1>Skills</h1>
         <div class="skills" id="skills">
@@ -80,8 +78,9 @@
             <div class="skills-icon"><a><i class="fa-solid fa-laptop"></i>Hardware</a></div>
         </div>
     </div>
-    <div id="projects-anchor"></div>
+    <div id="projects-anchor"><br><br><br></div>
     <div class="projects-wrapper">
+        <div style="color: #36C2CE">b</div>
         <h1>Projects</h1>
         <div class="projects" id="projects">
             <div class="projectsBox">
@@ -106,7 +105,7 @@
             </div>
         </div>
     </div>
-    <div id="contact-anchor"></div>
+    <div id="contact-anchor"><br><br><br></div>
     <div class="contact-wrapper">
     <h1>Contact</h1>
         Want to keep in touch with me? Check out my socials!
